@@ -429,11 +429,12 @@ UnitTest.asynctest('browser.tinymce.core.FormattingCommandsTest', function (succ
 
     editor.setContent(
       '<p><dfn>dfn tag </dfn> <code>code tag </code> <samp>samp tag</samp> ' +
-      '<kbd> kbd tag</kbd> <var> var tag</var> <cite> cite tag</cite> <mark> mark tag</mark> <q> q tag</q></p>'
+      '<kbd> kbd tag</kbd> <var> var tag</var> <cite> cite tag</cite> <mark> mark tag</mark> <q> q tag</q> ' +
+      '<strike>strike tag</strike> <s>s tag</s></p>'
     );
     editor.execCommand('SelectAll');
     editor.execCommand('RemoveFormat');
-    LegacyUnit.equal(editor.getContent(), '<p>dfn tag code tag samp tag kbd tag var tag cite tag mark tag q tag</p>');
+    LegacyUnit.equal(editor.getContent(), '<p>dfn tag code tag samp tag kbd tag var tag cite tag mark tag q tag strike tag s tag</p>');
   });
 
   TinyLoader.setupLight(function (editor, onSuccess, onFailure) {
